# node-chacha-poly1305-wasm

./: .gitignore  .npmignore  .travis.yml  Makefile  README.md  index.ts  package-lock.json  package.json  tsconfig.json
native/: Cargo.toml  Makefile
native/src/: chacha20.rs  chacha20poly1305rfc.rs  lib.rs  poly1305.rs
native/tests/: wasm_test.html
native/wasm-test/: node_test.js  wasm_test.html
src/: chacha.ts
test/: chacha.ts
