[package]
name = "chacha-poly1305-rust"
version = "0.1.0"
authors = ["Arik Sosman <git@arik.io>"]
edition = "2018"

[package.metadata.wasm-pack.profile.release]
#wasm-opt = false
#wasm-opt = ["-Oz", "--enable-mutable-globals"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# secp256k1 = { git = "https://github.com/rust-bitcoin/rust-secp256k1" }
#bitcoin = "0.25.0"
#secp256k1 = { path = "/Users/arik/Developer/rust-secp256k1" }
bitcoin_hashes = "0.7.6"
wasm-bindgen = "0.2"

js-sys = "0.3.45"
web-sys = { version = "0.3.45", features = ['console'] }

lightning = { path = "/Users/arik/Developer/rust-lightning/lightning" }
#regex = "0.1.80"

[profile.release]
# Tell `rustc` to optimize for small code size.
# opt-level = "s"
# lto = true
# opt-level = "z"


